--- a/lab 1/Front/can_goods.html
+++ b/lab 1/Front/can_goods.html
@@ -117,79 +117,33 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-<<<<<<< Updated upstream
-        <img src="../Front/Product Image/Gardenia.png" class="img-fluid" alt="product">
-        <p class="mt-2">Mega Sardines </p>
-        <p class="mt-2">₱28.00 </p>
-=======
+        <img src="../Front/Product Image/Century Tuna.jfif  " class="img-fluid" alt="product">
+        <p class="mt-2">Century tuna </p>
+        <p class="mt-2">₱45.25 </p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="../Front/Product Image/San Marino Tuna.jfif" class="img-fluid" alt="product">
+        <p class="mt-2">San Marino Tuna</p>
+        <p>₱30.50</p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
         <img src="../Front/Product Image/Mega Sardines.jfif" class="img-fluid" alt="product">
-        <p class="mt-2">Mega Sardines</p>
-        <p class="mt-2">₱120.00 </p>
->>>>>>> Stashed changes
+        <p class="mt-2">Mega Sardines </p>
+        <p>₱30.00</p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
     <div class="col-md-3">
       <div class="product-card">
         <img src="../Front/Product Image/Condensed Milk.jfif" class="img-fluid" alt="product">
-         <p class="mt-2">Condensed Milk</p>
-        <p>₱70.00</p>
-        <button class="btn btn-cart">Add to Cart</button>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="product-card">
-        <img src="../Front/Product Image/Evaporada.jfif" class="img-fluid" alt="product">
-         <p class="mt-2">Evaporada</p>
-        <p>₱60.00</p>
-        <button class="btn btn-cart">Add to Cart</button>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="product-card">
-<<<<<<< Updated upstream
-        <img src="Cookies.png" class="img-fluid" alt="product">
-        <p class="mt-2">Corned Beef </p>
-        <p>₱32.00</p>
-        <button class="btn btn-cart">Add to Cart</button>
-      </div>
-    </div>
-  </div>
-   <div class="row">
-    <div class="col-md-3">
-      <div class="product-card">
-        <img src="../Front/Product Image/Gardenia.png" class="img-fluid" alt="product">
-        <p class="mt-2">Mega Sardines </p>
-        <p class="mt-2">₱28.00 </p>
-        <button class="btn btn-cart">Add to Cart</button>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="product-card">
-        <img src="Pandesal.png" class="img-fluid" alt="product">
-        <p class="mt-2">Condensada Milk </p>
-        <p>₱50.00</p>
-        <button class="btn btn-cart">Add to Cart</button>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="product-card">
-        <img src="Banana_Bread.png" class="img-fluid" alt="product">
-        <p class="mt-2">Evaporada Milk </p>
-        <p>₱150.00</p>
-        <button class="btn btn-cart">Add to Cart</button>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="product-card">
-        <img src="Cookies.png" class="img-fluid" alt="product">
-        <p class="mt-2">Corned Beef </p>
-        <p>₱32.00</p>
-=======
-        <img src="../Front/Product Image/Century Tuna.jfif" class="img-fluid" alt="product">
-         <p class="mt-2">Century Tuna</p>
-        <p>₱120.00</p>
->>>>>>> Stashed changes
+        <p class="mt-2">Condensed Milk </p>
+        <p>₱58.00</p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
@@ -199,33 +153,33 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="../Front/Product Image/San Marino Tuna.jfif" class="img-fluid" alt="product">
-        <p class="mt-2">San Marino Tuna</p>
-        <p class="mt-2">₱100.00 </p>
-        <button class="btn btn-cart">Add to Cart</button>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="product-card">
-        <img src="../Front/Product Image/Delimondo.jfif" class="img-fluid" alt="product">
-         <p class="mt-2">Delimondo</p>
-        <p>₱120.00</p>
+        <img src="../Front/Product Image/Evaporada.jfif" class="img-fluid" alt="product">
+        <p class="mt-2">Evaporada </p>
+        <p class="mt-2">₱60.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
     <div class="col-md-3">
       <div class="product-card">
         <img src="../Front/Product Image/Hunt's Pork & Beans.jfif" class="img-fluid" alt="product">
-         <p class="mt-2">Hunt's Pork & Beans</p>
-        <p>₱100.00</p>
+        <p class="mt-2">Hunt's Pork & Beans </p>
+        <p>₱38.00</p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="../Front/Product Image/okra.png" class="img-fluid" alt="product">
-         <p class="mt-2">Okra</p>
-        <p>₱100.00</p>
+        <img src="../Front/Product Image/Delimondo.jfif" class="img-fluid" alt="product">
+        <p class="mt-2">Delimondo </p>
+        <p>₱195.00</p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="../Front/Product Image/Del Monte Fruit Cocktail.jfif" class="img-fluid" alt="product">
+        <p class="mt-2">Del Monte Fruit Cocktail </p>
+        <p>₱285.00</p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
@@ -235,33 +189,33 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="../Front/Product Image/onion.png" class="img-fluid" alt="product">
-         <p class="mt-2">Onion</p>
-        <p class="mt-2">₱120.00 </p>
+        <img src="../Front/Product Image/Reno Liver Spread.jfif" class="img-fluid" alt="product">
+        <p class="mt-2">Reno Liver Spread </p>
+        <p class="mt-2">₱30.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="../Front/Product Image/carrots.png" class="img-fluid" alt="product">
-         <p class="mt-2">Carrot</p>
-        <p>₱100.00</p>
+        <img src="../Front/Product Image/Wow Ulam Afritada.jfif" class="img-fluid" alt="product">
+        <p class="mt-2">Wow Ulam Afritada </p>
+        <p>₱40.00</p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="../Front/Product Image/kangkong.png" class="img-fluid" alt="product">
-         <p class="mt-2">Kangkong</p>
-        <p>₱60.00</p>
+        <img src="../Front/Product Image/555 Tuna Caldereta.jfif" class="img-fluid" alt="product">
+        <p class="mt-2">555 Tuna Caldereta </p>
+        <p>₱40.00</p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="../Front/Product Image/potatoes.png" class="img-fluid" alt="product">
-         <p class="mt-2">Potatoes</p>
-        <p>₱1100.00</p>
+        <img src="../Front/Product Image/PureFoods Vienna Sausage.jfif" class="img-fluid" alt="product">
+        <p class="mt-2">PureFoods Vienna Sausage </p>
+        <p>₱81.00</p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
@@ -269,8 +223,6 @@
 </div>
   </div>
 </div>
-
-
     
 
 <footer class="mt-5 py-4">
