--- a/lab 1/Front/can_goods.html
+++ b/lab 1/Front/can_goods.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
- <style>
-  body {
+  <style>
+ body {
   font-family: Arial, sans-serif;
   background-color: #F3E2C7;
   background-image: url('Product Image/logo.png');
@@ -64,7 +63,7 @@
     color: #F3E2C7; /* beige for headers */
   }
 
-  .product-card {
+ .product-card {
     background-color: white;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -90,10 +89,9 @@
     color: white;
   }
 </style>
-
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark px-4">
+  <nav class="navbar navbar-expand-lg navbar-dark px-4">
   <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="index.html">
   <img src="Product Image/logo.png" alt="VII Market Logo" style="height: 40px;" />
   </a>
@@ -112,81 +110,116 @@
     </ul>
   </div>
 </nav>
-<!-- Canned Goods -->
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
         <img src="../Front/Product Image/Mega Sardines.jfif" class="img-fluid" alt="product">
-        <p class="mt-2">Mega Sardines </p>
-        <p class="mt-2">₱28.00 </p>
+        <p class="mt-2">Mega Sardines</p>
+        <p class="mt-2">₱120.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Pandesal.png" class="img-fluid" alt="product">
-        <p class="mt-2">Condensada Milk </p>
-        <p>₱50.00</p>
+        <img src="../Front/Product Image/Century Tuna.jfif" class="img-fluid" alt="product">
+         <p class="mt-2">Century Tuna</p>
+        <p>₱70.00</p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Banana_Bread.png" class="img-fluid" alt="product">
-        <p class="mt-2">Evaporada Milk </p>
-        <p>₱150.00</p>
+        <img src="../Front/Product Image/555 Tuna Caldereta.jfif" class="img-fluid" alt="product">
+         <p class="mt-2">555 Tune Caldereta</p>
+        <p>₱60.00</p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Cookies.png" class="img-fluid" alt="product">
-        <p class="mt-2">Corned Beef </p>
-        <p>₱32.00</p>
-        <button class="btn btn-cart">Add to Cart</button>
-      </div>
-    </div>
-  </div>
-   <div class="row">
-    <div class="col-md-3">
-      <div class="product-card">
-        <img src="../Front/Product Image/" class="img-fluid" alt="product">
-        <p class="mt-2">Mega Sardines </p>
-        <p class="mt-2">₱28.00 </p>
-        <button class="btn btn-cart">Add to Cart</button>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="product-card">
-        <img src="Pandesal.png" class="img-fluid" alt="product">
-        <p class="mt-2">Condensada Milk </p>
-        <p>₱50.00</p>
-        <button class="btn btn-cart">Add to Cart</button>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="product-card">
-        <img src="Banana_Bread.png" class="img-fluid" alt="product">
-        <p class="mt-2">Evaporada Milk </p>
-        <p>₱150.00</p>
-        <button class="btn btn-cart">Add to Cart</button>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="product-card">
-        <img src="Cookies.png" class="img-fluid" alt="product">
-        <p class="mt-2">Corned Beef </p>
-        <p>₱32.00</p>
+        <img src="../Front/Product Image/San Marino Tuna.jfif" class="img-fluid" alt="product">
+         <p class="mt-2">San Marino Tuna Spicy</p>
+        <p>₱120.00</p>
         <button class="btn btn-cart">Add to Cart</button>
       </div>
     </div>
   </div>
 </div>
-
-
-
-    
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="../Front/Product Image/Wow Ulam Afritada.jfif" class="img-fluid" alt="product">
+        <p class="mt-2">Wow Ulam Afritada</p>
+        <p class="mt-2">₱100.00 </p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="../Front/Product Image/PureFoods Vienna Sausage.jfif" class="img-fluid" alt="product">
+         <p class="mt-2">PureFoods Vienna Sausage</p>
+        <p>₱120.00</p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="../Front/Product Image/Hunt's Pork & Beans.jfif" class="img-fluid" alt="product">
+         <p class="mt-2">Hunt's Pork & Beans</p>
+        <p>₱100.00</p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="../Front/Product Image/Delimondo.jfif" class="img-fluid" alt="product">
+         <p class="mt-2">Delimondo</p>
+        <p>₱100.00</p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="../Front/Product Image/Evaporada.jfif" class="img-fluid" alt="product">
+         <p class="mt-2">Evaporada</p>
+        <p class="mt-2">₱120.00 </p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="../Front/Product Image/Condensed Milk.jfif" class="img-fluid" alt="product">
+         <p class="mt-2">Condensed Milk</p>
+        <p>₱100.00</p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="../Front/Product Image/Reno Liver Spread.jfif" class="img-fluid" alt="product">
+         <p class="mt-2">Reno Liver Spread</p>
+        <p>₱60.00</p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="../Front/Product Image/Del Monte Fruit Cocktail.jfif" class="img-fluid" alt="product">
+         <p class="mt-2">Del Monte Fruit Cocktail</p>
+        <p>₱1100.00</p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+  </div>
+</div>
+  </div>
+</div>
 
 <footer class="mt-5 py-4">
   <div class="container">
@@ -240,7 +273,6 @@
     </div>
   </div>
 </footer>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
