--- a/lab 1/Front/admin/Profile.html
+++ b/lab 1/Front/admin/Profile.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Profile</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    
-    .body{
-        background-color: beige;
-    }
     :root {
       --beige: #eedec6;
       --brown: #b8864b;
@@ -18,14 +14,14 @@
       --maroon: #4a0e08;
     }
 
-    #wrapper.toggled #sidebar-wrapper {
-      margin-left: -250px;
+    body {
+      background-color: var(--beige);
     }
 
     #sidebar-wrapper {
       width: 250px;
       min-height: 100vh;
-      background-color: var(--olive) !important;
+      background-color: var(--olive);
     }
 
     .sidebar-heading {
@@ -33,22 +29,31 @@
     }
 
     .list-group-item {
-      background-color: var(--olive) !important;
+      background-color: var(--olive);
       color: var(--beige);
       border: none;
     }
 
     .list-group-item:hover {
-      background-color: var(--brown) !important;
+      background-color: var(--brown);
       color: white;
     }
 
     .navbar {
-      background-color: var(--brown) !important;
+      background-color: var(--brown);
     }
 
     .navbar h4 {
       color: white;
+    }
+
+    .card {
+      border: none;
+      border-radius: 1rem;
+    }
+
+    .card-title {
+      color: var(--olive);
     }
 
     .btn-primary {
@@ -61,12 +66,21 @@
       border-color: var(--maroon);
     }
 
-    .card {
-      border: none;
+    .profile-pic {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid var(--sage);
     }
 
-    .card-title {
+    label {
       color: var(--olive);
+      font-weight: 500;
+    }
+
+    input:disabled {
+      background-color: #f3f3f3;
     }
   </style>
 </head>
@@ -78,10 +92,47 @@
       <div class="list-group list-group-flush">
         <a href="dashboard.html" class="list-group-item list-group-item-action">Dashboard</a>
         <a href="inventory.html" class="list-group-item list-group-item-action">Inventory</a>
-        <a href="Sales report.html" class="list-group-item list-group-item-action">Sales Report</a>
+        <a href="sales report.html" class="list-group-item list-group-item-action">Sales Report</a>
         <a href="Profile.html" class="list-group-item list-group-item-action">Profile</a>
       </div>
     </div>
-    
+
+    <!-- Page Content -->
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <div class="card shadow p-4">
+            <div class="text-center mb-4">
+              <img src="https://via.placeholder.com/120" alt="Admin Photo" class="profile-pic mb-3">
+              <h5 class="card-title mb-0">7am Without Swing</h5>
+              <p class="text-muted">IT Admin</p>
+            </div>
+            <form>
+              <div class="mb-3">
+                <label for="name" class="form-label">Full Name</label>
+                <input type="text" class="form-control" id="name" value="Jhonnfall P. Sanchez">
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" value="jhonnfall@example.com">
+              </div>
+              <div class="mb-3">
+                <label for="phone" class="form-label">Phone Number</label>
+                <input type="text" class="form-control" id="phone" value="+63 900 123 4567">
+              </div>
+              <div class="mb-4">
+                <label for="role" class="form-label">Role</label>
+                <input type="text" class="form-control" id="role" value="Administrator" disabled>
+              </div>
+              <button type="submit" class="btn btn-primary w-100">Save Changes</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
