--- a/lab 1/Front/admin/inventory.html
+++ b/lab 1/Front/admin/inventory.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=x, initial-scale=1.0">
-    <title>Inventory</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inventory Management</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    
-    .body{
-        background-color: beige;
-    }
     :root {
       --beige: #eedec6;
       --brown: #b8864b;
@@ -17,103 +13,90 @@
       --olive: #263812;
       --maroon: #4a0e08;
     }
-
-    #wrapper.toggled #sidebar-wrapper {
-      margin-left: -250px;
+    body {
+      background-color: var(--beige);
     }
-
-    #sidebar-wrapper {
-      width: 250px;
-      min-height: 100vh;
-      background-color: var(--olive) !important;
-    }
-
-    .sidebar-heading {
-      color: var(--beige);
-    }
-
-    .list-group-item {
-      background-color: var(--olive) !important;
-      color: var(--beige);
-      border: none;
-    }
-
-    .list-group-item:hover {
-      background-color: var(--brown) !important;
-      color: white;
-    }
-
     .navbar {
       background-color: var(--brown) !important;
     }
-
-    .navbar h4 {
-      color: white;
+    .navbar a, .navbar h4 {
+      color: white !important;
     }
-
     .btn-primary {
       background-color: var(--sage);
       border-color: var(--sage);
     }
-
     .btn-primary:hover {
       background-color: var(--maroon);
       border-color: var(--maroon);
     }
-
-    .card {
-      border: none;
+    .btn-danger {
+      background-color: var(--maroon);
+      border-color: var(--maroon);
     }
-
-    .card-title {
+    .btn-danger:hover {
+      background-color: #300a05;
+      border-color: #300a05;
+    }
+    .table thead {
+      background-color: var(--olive);
+      color: white;
+    }
+    .modal-header {
+      background-color: var(--brown);
+      color: white;
+    }
+    .form-label {
+      font-weight: 500;
       color: var(--olive);
     }
   </style>
 </head>
 <body>
-  <div class="d-flex" id="wrapper">
-    <!-- Sidebar -->
-    <div class="p-3" id="sidebar-wrapper">
-      <div class="sidebar-heading text-center fs-4 fw-bold mb-4">Admin Panel</div>
-      <div class="list-group list-group-flush">
-        <a href="dashboard.html" class="list-group-item list-group-item-action">Dashboard</a>
-        <a href="inventory.html" class="list-group-item list-group-item-action">Inventory</a>
-        <a href="Sales report.html" class="list-group-item list-group-item-action">Sales Report</a>
-        <a href="Profile.html" class="list-group-item list-group-item-action">Profile</a>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="dashboard.html">← Dashboard</a>
+      <h4 class="ms-auto mb-0">Inventory</h4>
+    </div>
+  </nav>
+
+  <div class="container mt-4">
+    <div class="card shadow-sm p-4 mb-4">
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <h5 class="mb-0">Product Inventory</h5>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">➕ Add Item</button>
+      </div>
+
+      <div class="table-responsive">
+        <table class="table table-hover align-middle text-center">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Product Name</th>
+              <th>Category</th>
+              <th>Quantity</th>
+              <th>Price</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="inventoryTable">
+            <tr>
+              <td>1</td>
+              <td>Green T-shirt</td>
+              <td>Clothing</td>
+              <td>50</td>
+              <td>$15.00</td>
+              <td>
+                <button class="btn btn-sm btn-primary me-1" onclick="editItem(this)">✏️ Edit</button>
+                <button class="btn btn-sm btn-danger" onclick="deleteItem(this)">🗑️ Delete</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
-
-    <div class="container mt-4">
-    <div class="d-flex justify-content-between mb-3">
-      <h5>Product Inventory</h5>
-      <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Item</button>
-    </div>
-
-    <table class="table table-hover shadow-sm">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Product Name</th>
-          <th>Category</th>
-          <th>Quantity</th>
-          <th>Price</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody id="inventoryTable">
-        <tr>
-          <td>1</td>
-          <td>Green T-shirt</td>
-          <td>Clothing</td>
-          <td>50</td>
-          <td>$15.00</td>
-          <td>
-            <button class="btn btn-primary btn-sm" onclick="editItem(this)">Edit</button>
-            <button class="btn btn-danger btn-sm" onclick="deleteItem(this)">Delete</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
   </div>
 
   <!-- Add Modal -->
@@ -126,10 +109,22 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
           <div class="modal-body">
-            <input required type="text" id="addName" class="form-control mb-2" placeholder="Product Name">
-            <input required type="text" id="addCategory" class="form-control mb-2" placeholder="Category">
-            <input required type="number" id="addQuantity" class="form-control mb-2" placeholder="Quantity">
-            <input required type="text" id="addPrice" class="form-control" placeholder="Price (e.g., $10.00)">
+            <div class="mb-3">
+              <label class="form-label">Product Name</label>
+              <input required type="text" id="addName" class="form-control">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Category</label>
+              <input required type="text" id="addCategory" class="form-control">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Quantity</label>
+              <input required type="number" id="addQuantity" class="form-control" min="0">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Price (e.g., $10.00)</label>
+              <input required type="text" id="addPrice" class="form-control">
+            </div>
           </div>
           <div class="modal-footer">
             <button class="btn btn-primary" type="submit">Add Item</button>
@@ -150,10 +145,22 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
           <div class="modal-body">
-            <input required type="text" id="editName" class="form-control mb-2">
-            <input required type="text" id="editCategory" class="form-control mb-2">
-            <input required type="number" id="editQuantity" class="form-control mb-2">
-            <input required type="text" id="editPrice" class="form-control">
+            <div class="mb-3">
+              <label class="form-label">Product Name</label>
+              <input required type="text" id="editName" class="form-control">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Category</label>
+              <input required type="text" id="editCategory" class="form-control">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Quantity</label>
+              <input required type="number" id="editQuantity" class="form-control" min="0">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Price</label>
+              <input required type="text" id="editPrice" class="form-control">
+            </div>
           </div>
           <div class="modal-footer">
             <button class="btn btn-primary" type="submit">Save Changes</button>
@@ -164,6 +171,7 @@
     </div>
   </div>
 
+  <!-- JS Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     let editRow = null;
@@ -184,17 +192,17 @@
         <td>${quantity}</td>
         <td>${price}</td>
         <td>
-          <button class="btn btn-primary btn-sm" onclick="editItem(this)">Edit</button>
-          <button class="btn btn-danger btn-sm" onclick="deleteItem(this)">Delete</button>
+          <button class="btn btn-sm btn-primary me-1" onclick="editItem(this)">✏️ Edit</button>
+          <button class="btn btn-sm btn-danger" onclick="deleteItem(this)">🗑️ Delete</button>
         </td>
       `;
       updateRowNumbers();
-      document.getElementById('addModal').querySelector('form').reset();
+      event.target.reset();
       bootstrap.Modal.getInstance(document.getElementById('addModal')).hide();
     }
 
     function editItem(btn) {
-      editRow = btn.parentElement.parentElement;
+      editRow = btn.closest('tr');
       document.getElementById('editName').value = editRow.cells[1].innerText;
       document.getElementById('editCategory').value = editRow.cells[2].innerText;
       document.getElementById('editQuantity').value = editRow.cells[3].innerText;
@@ -212,16 +220,15 @@
     }
 
     function deleteItem(btn) {
-      btn.parentElement.parentElement.remove();
+      btn.closest('tr').remove();
       updateRowNumbers();
     }
 
     function updateRowNumbers() {
-      const rows = document.querySelectorAll("#inventoryTable tr");
-      rows.forEach((row, index) => {
+      document.querySelectorAll("#inventoryTable tr").forEach((row, index) => {
         row.cells[0].innerText = index + 1;
       });
     }
   </script>
-  </body>
+</body>
 </html>
